버퍼링 / 송출 / 송출 중단 에 따라 play 버튼 노출 로직 수정

--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,8 @@ iOSInjectionProject/
 # Xcode
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
-
+### xcarchive
+*.xcarchive
 
 
 ## Gcc Patch
