--- a/ShopLiveSDK.xcodeproj/xcshareddata/xcschemes/ShopLiveSDK.xcscheme
+++ b/ShopLiveSDK.xcodeproj/xcshareddata/xcschemes/ShopLiveSDK.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1BA5154C25CBDCD100070181"
-               BuildableName = "ShopLiveSDK.framework"
+               BuildableName = "ShopLiveSDK_MinVer13.framework"
                BlueprintName = "ShopLiveSDK"
                ReferencedContainer = "container:ShopLiveSDK.xcodeproj">
             </BuildableReference>
@@ -61,7 +61,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1BA5154C25CBDCD100070181"
-            BuildableName = "ShopLiveSDK.framework"
+            BuildableName = "ShopLiveSDK_MinVer13.framework"
             BlueprintName = "ShopLiveSDK"
             ReferencedContainer = "container:ShopLiveSDK.xcodeproj">
          </BuildableReference>
