--- a/ShopLiveSDK.xcodeproj/xcshareddata/xcschemes/ShopLiveSDKRx.xcscheme
+++ b/ShopLiveSDK.xcodeproj/xcshareddata/xcschemes/ShopLiveSDKRx.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BFBBAEB226A17F7A00574958"
-               BuildableName = "ShopLiveSDK.framework"
+               BuildableName = "ShopLiveSDK_MinVer11.framework"
                BlueprintName = "ShopLiveSDKRx"
                ReferencedContainer = "container:ShopLiveSDK.xcodeproj">
             </BuildableReference>
@@ -51,7 +51,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BFBBAEB226A17F7A00574958"
-            BuildableName = "ShopLiveSDK.framework"
+            BuildableName = "ShopLiveSDK_MinVer11.framework"
             BlueprintName = "ShopLiveSDKRx"
             ReferencedContainer = "container:ShopLiveSDK.xcodeproj">
          </BuildableReference>
