아이콘 변경, os pip -> 앱 복귀시 UI 보이도록 수정

--- a/ShopLiveSDK.xcodeproj/xcshareddata/xcschemes/ShopLiveDemo.xcscheme
+++ b/ShopLiveSDK.xcodeproj/xcshareddata/xcschemes/ShopLiveDemo.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BFAD8EA9265A23FD00202160"
-               BuildableName = "ShopLiveDemo.app"
+               BuildableName = "Shoplive Demo.app"
                BlueprintName = "ShopLiveDemo"
                ReferencedContainer = "container:ShopLiveSDK.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BFAD8EA9265A23FD00202160"
-            BuildableName = "ShopLiveDemo.app"
+            BuildableName = "Shoplive Demo.app"
             BlueprintName = "ShopLiveDemo"
             ReferencedContainer = "container:ShopLiveSDK.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BFAD8EA9265A23FD00202160"
-            BuildableName = "ShopLiveDemo.app"
+            BuildableName = "Shoplive Demo.app"
             BlueprintName = "ShopLiveDemo"
             ReferencedContainer = "container:ShopLiveSDK.xcodeproj">
          </BuildableReference>
