--- a/ShopLiveDemo/ShopLiveDemo-QA-Info.plist
+++ b/ShopLiveDemo/ShopLiveDemo-QA-Info.plist
@@ -25,7 +25,7 @@
 			<string>cloud.shoplive.sdk.demo</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>shoplive</string>
+				<string>shopliveqa</string>
 			</array>
 		</dict>
 	</array>
