로그인 화면 디자인 적용

--- a/swift/ShopLiveSwiftSample/misc/Info.plist
+++ b/swift/ShopLiveSwiftSample/misc/Info.plist
@@ -47,6 +47,8 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Shizuru-Regular.ttf</string>
+		<string>NotoSansKR-Medium.otf</string>
+		<string>NotoSansKR-Regular.otf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
