--- a/swift/Podfile
+++ b/swift/Podfile
@@ -6,6 +6,7 @@ use_frameworks!
 
 
 target 'ShopLiveSwiftSample' do
-  pod 'ShopLive', '1.2.6'
+  pod 'ShopLive', '1.3.13'
+#  pod 'ShopLive', '1.3.14'
 end
 
