--- a/swift/Podfile
+++ b/swift/Podfile
@@ -6,7 +6,7 @@ use_frameworks!
 
 
 target 'ShopLiveSwiftSample' do
-  pod 'ShopLive', '1.3.13'
-#  pod 'ShopLive', '1.3.14'
+  pod 'ShopLive', '1.4.0'
+  pod 'ShopliveShortformSDK', '1.4.0'
 end
 
