--- a/swift/Podfile
+++ b/swift/Podfile
@@ -4,9 +4,10 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '11.0'
 use_frameworks!
 
-
+#if latest version is not downloaded, try 'pod repo update' command to reload your cocoapod repo
 target 'ShopLiveSwiftSample' do
-#  pod 'ShopLive', '1.4.2'
-#  pod 'ShopliveShortformSDK', '1.4.0'
+  pod 'ShopLive' #latest versin 1.5.0
+  pod 'ShopliveShortformSDK' #latest versin 1.5.
+  pod 'ShopliveSDKCommon' #latest versin 1.5.
 end
 
